[gd_scene load_steps=13 format=3 uid="uid://bsum5qmlep7yk"]

[ext_resource type="Script" uid="uid://b1mkdbgautjbr" path="res://scenes/screens/alien_cutscene/alien_cutscene.gd" id="1_x5vd4"]
[ext_resource type="Texture2D" uid="uid://dsbwx6s8w14k0" path="res://assets/art/ui/alien_cutscene/space_background.png" id="2_2sw51"]
[ext_resource type="Texture2D" uid="uid://ev1aphk8jneh" path="res://assets/art/ui/alien_cutscene/spaceship.png" id="3_dly65"]
[ext_resource type="Texture2D" uid="uid://bla8jat6ij1j7" path="res://assets/art/ui/alien_cutscene/tractor_beam.png" id="4_xkkmb"]
[ext_resource type="Texture2D" uid="uid://b5p8oe4wdpbmy" path="res://assets/art/ui/alien_cutscene/beam_with_crowd.png" id="5_0mwki"]
[ext_resource type="Texture2D" uid="uid://b8i80wk34lskv" path="res://assets/art/ui/alien_cutscene/alien_silhouette.png" id="6_uy5hi"]
[ext_resource type="Texture2D" uid="uid://cfjqtmv65tf27" path="res://assets/art/ui/alien_cutscene/alien_close_up.png" id="7_67pei"]

[sub_resource type="Animation" id="Animation_0mwki"]
resource_name = "space_ship_bob"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpaceShip:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -2), Vector2(0, 0), Vector2(0, 2), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TractorBeam:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 2), Vector2(0, 0), Vector2(0, 2), Vector2(0, 4), Vector2(0, 2)]
}

[sub_resource type="Animation" id="Animation_uy5hi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpaceShip:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TractorBeam:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TractorBeam:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Silhouette:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_67pei"]
resource_name = "beam_start"
length = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TractorBeam:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1), Vector2(1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"start_bob_again"
}]
}

[sub_resource type="Animation" id="Animation_om7y2"]
resource_name = "fade_aliens"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Silhouette:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_om7y2"]
_data = {
&"RESET": SubResource("Animation_uy5hi"),
&"beam_start": SubResource("Animation_67pei"),
&"fade_aliens": SubResource("Animation_om7y2"),
&"space_ship_bob": SubResource("Animation_0mwki")
}

[node name="AlienCutscene" type="Node"]
script = ExtResource("1_x5vd4")

[node name="SpaceBackground" type="TextureRect" parent="."]
unique_name_in_owner = true
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_2sw51")

[node name="SpaceShip" type="TextureRect" parent="."]
unique_name_in_owner = true
offset_right = 280.0
offset_bottom = 180.0
texture = ExtResource("3_dly65")

[node name="TractorBeam" type="TextureRect" parent="."]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -140.0
offset_top = 2.0
offset_right = 140.0
offset_bottom = 182.0
grow_horizontal = 2
scale = Vector2(1e-05, 1)
pivot_offset = Vector2(140, 90)
texture = ExtResource("4_xkkmb")

[node name="CrowdBeam" type="TextureRect" parent="."]
unique_name_in_owner = true
offset_left = -280.0
offset_bottom = 180.0
texture = ExtResource("5_0mwki")

[node name="Silhouette" type="TextureRect" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
offset_left = -280.0
offset_bottom = 180.0
texture = ExtResource("6_uy5hi")

[node name="Aliens" type="TextureRect" parent="."]
unique_name_in_owner = true
offset_left = -280.0
offset_bottom = 180.0
texture = ExtResource("7_67pei")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_om7y2")
}
autoplay = "space_ship_bob"
